--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1028,9 +1028,6 @@ section.lazy-placeholder:after {
 .cid-rOYcTy2LbV .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/boa11-2000x1124.jpg");
-}
 .cid-qTkA127IK8 .mbr-text,
 .cid-qTkA127IK8 .mbr-section-btn {
   color: #ffffff;
@@ -13364,15 +13361,92 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG .media-container-row .row-copirayt p {
   width: 100%;
 }
-#custom-html-9d {
-  /* Type valid CSS here */
+#custom-html-9d * {
+  box-sizing: border-box;
 }
-#custom-html-9d div {
-  padding: 80px 0;
-  color: #777;
-  text-align: center;
+#custom-html-9d body {
+  width: 100%;
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  margin: 0;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background: lightgrey;
 }
-#custom-html-9d p {
-  font-size: 60px;
-  color: #777;
+#custom-html-9d #box {
+  background: black;
+  height: 128px;
+  width: 128px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#custom-html-9d #box > svg {
+  height: 24px;
+  width: 24px;
+  /*   transform: scale(5); */
+}
+#custom-html-9d #box > svg path#on-air-out {
+  animation: on-air-out 2s infinite;
+}
+#custom-html-9d #box > svg path#on-air-in {
+  animation: on-air-in 2s infinite;
+}
+#custom-html-9d #box > svg ellipse {
+  transform-origin: 50% 50%;
+  animation: on-air-circle 2s infinite;
+}
+@keyframes on-air-circle {
+  0% {
+    opacity: .1;
+    transform: scale(1);
+  }
+  25% {
+    opacity: 1;
+    transform: scale(2.4);
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: .3;
+  }
+}
+@keyframes on-air-in {
+  0% {
+    opacity: .3;
+  }
+  25% {
+    opacity: .3;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .3;
+  }
+}
+@keyframes on-air-out {
+  0% {
+    opacity: .3;
+  }
+  50% {
+    opacity: .3;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: .3;
+  }
 }
