--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1149,6 +1149,113 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rY2c2i5o3v {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #131313;
+}
+.cid-rY2c2i5o3v .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rY2c2i5o3v .number-wrap {
+  color: #131313;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rY2c2i5o3v .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #131313;
+}
+.cid-rY2c2i5o3v .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rY2c2i5o3v .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #131313;
+}
+.cid-rY2c2i5o3v .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rY2c2i5o3v .dot {
+    display: none;
+  }
+  .cid-rY2c2i5o3v .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rY2c2i5o3v .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 576px) {
+  .cid-rY2c2i5o3v .row {
+    flex-wrap: nowrap;
+  }
+  .cid-rY2c2i5o3v .number {
+    white-space: nowrap;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rY2c2i5o3v .number {
+    font-size: 30px;
+  }
+  .cid-rY2c2i5o3v .period {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rY2c2i5o3v .number {
+    font-size: 20px;
+  }
+  .cid-rY2c2i5o3v .period {
+    font-size: 0.6rem;
+  }
+}
+.cid-rY2c2i5o3v H2 {
+  color: #ff3366;
+}
+.cid-rY2c2i5o3v H4 {
+  text-align: center;
+  color: #000000;
+}
+.cid-rY2c2i5o3v H5 {
+  color: #131313;
+}
 .cid-rOTbRP3tQZ {
   padding-top: 45px;
   padding-bottom: 60px;
