--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1359,13 +1359,36 @@ section.lazy-placeholder:after {
 }
 .cid-rOTJNH9iCp .section-text {
   padding: 2rem 0;
-  color: #767676;
+  color: #ffffff;
 }
 .cid-rOTJNH9iCp .inner-container {
   margin: 0 auto;
 }
 @media (max-width: 768px) {
   .cid-rOTJNH9iCp .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rYemFOrjAc {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #131313;
+}
+.cid-rYemFOrjAc .line {
+  background-color: #131313;
+  color: #131313;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rYemFOrjAc .section-text {
+  padding: 2rem 0;
+}
+.cid-rYemFOrjAc .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rYemFOrjAc .inner-container {
     width: 100% !important;
   }
 }
@@ -13402,8 +13425,8 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-rYdAQHk1Y9 {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #000000;
 }
 .cid-rYdAQHk1Y9 .card-box {
@@ -13500,7 +13523,7 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rYedY3riSh H2 {
-  color: #ff3366;
+  color: #ffffff;
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
