create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -8938,6 +8938,7 @@ section.lazy-placeholder:after {
 }
 .cid-rVFIPL3Z2o .section-text {
   padding: 2rem 0;
+  text-align: center;
 }
 .cid-rVFIPL3Z2o .inner-container {
   margin: 0 auto;
@@ -8946,6 +8947,42 @@ section.lazy-placeholder:after {
   .cid-rVFIPL3Z2o .inner-container {
     width: 100% !important;
   }
+}
+.cid-rYpOQNU3ED {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rYpOQNU3ED .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rYpOQNU3ED .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rYpOQNU3ED .mbr-text {
+  color: #767676;
+}
+.cid-rYq0LMgMVB {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rYq0LMgMVB .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rYq0LMgMVB .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rYq0LMgMVB .mbr-text {
+  color: #767676;
 }
 .cid-rWTq0VIkyw {
   padding-top: 60px;
@@ -9143,6 +9180,24 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rW2GWIIhlA .mbr-text {
+  color: #767676;
+}
+.cid-rYq1XZoEpj {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rYq1XZoEpj .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rYq1XZoEpj .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rYq1XZoEpj .mbr-text {
   color: #767676;
 }
 .cid-rVA4Ch067t {
