create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1369,7 +1369,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -2430,7 +2430,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -3139,7 +3139,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -3732,7 +3732,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -4338,7 +4338,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -4921,7 +4921,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -5601,7 +5601,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -6290,7 +6290,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -6996,7 +6996,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -7637,7 +7637,7 @@ section.lazy-placeholder:after {
 }
 .cid-rT1ETry8Ba {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rT1ETry8Ba .row-links {
@@ -8441,7 +8441,7 @@ section.lazy-placeholder:after {
 }
 .cid-rU4Xibm7z9 {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rU4Xibm7z9 .row-links {
@@ -9508,7 +9508,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -10157,7 +10157,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -10847,7 +10847,7 @@ section.lazy-placeholder:after {
 }
 .cid-rW9Otal2hd {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rW9Otal2hd .row-links {
@@ -11737,7 +11737,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -12540,7 +12540,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -13041,7 +13041,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -13638,7 +13638,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -14227,7 +14227,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -14731,7 +14731,7 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background-color: #131313;
 }
 .cid-rPJyv7S1OG .row-links {
@@ -14806,4 +14806,224 @@ section.lazy-placeholder:after {
 }
 .cid-rPJyv7S1OG .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-s1IUtPj28g {
+  padding-top: 45px;
+  padding-bottom: 105px;
+  background-color: #000000;
+}
+.cid-s1IUtPj28g .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-s1IUtPj28g .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-s1IUtPj28g .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  background-color: #eee;
+}
+.cid-s1IUtPj28g .card-front {
+  z-index: 2;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.cid-s1IUtPj28g .card-front img {
+  height: 100%;
+  min-width: 100%;
+  width: auto;
+}
+.cid-s1IUtPj28g .card_back {
+  width: 100%;
+  height: 100%;
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #000000;
+  z-index: 1;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.cid-s1IUtPj28g .card {
+  min-height: 200px;
+  min-weight: 200px;
+}
+.cid-s1IUtPj28g .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.cid-s1IUtPj28g .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+.cid-s1IUtPj28g .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-s1IUtPj28g .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-s1IUtPj28g .mbr-section-title {
+  color: #ff3366;
+}
+.cid-s1IUtPj28g H4 {
+  color: #ff3366;
+}
+.cid-s1IY8XwO6D {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #000000;
+}
+@media (max-width: 767px) {
+  .cid-s1IY8XwO6D .content {
+    text-align: center;
+  }
+  .cid-s1IY8XwO6D .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-s1IY8XwO6D .img-logo img {
+  height: 6rem;
+}
+.cid-s1IY8XwO6D .form-control {
+  margin-bottom: 1rem;
+  padding: 1.07em 1.07em;
+  background-color: #f5f5f5;
+  border: 1px solid #e8e8e8;
+  color: #656565;
+  line-height: 1.43;
+  min-height: 3.5em;
+  border-radius: .25rem;
+}
+.cid-s1IY8XwO6D .form-control:focus,
+.cid-s1IY8XwO6D .form-control:hover {
+  border: 1px solid #e8e8e8;
+  background-color: #f5f5f5;
+}
+.cid-s1IY8XwO6D .form-group {
+  margin-bottom: 1rem;
+}
+.cid-s1IY8XwO6D input::-webkit-input-placeholder,
+.cid-s1IY8XwO6D textarea::-webkit-input-placeholder {
+  color: #656565;
+}
+.cid-s1IY8XwO6D input:-moz-placeholder,
+.cid-s1IY8XwO6D textarea:-moz-placeholder {
+  color: #656565;
+}
+.cid-s1IY8XwO6D .jq-selectbox li,
+.cid-s1IY8XwO6D .jq-selectbox li {
+  background-color: #f5f5f5;
+  color: #000000;
+}
+.cid-s1IY8XwO6D .jq-selectbox li:hover,
+.cid-s1IY8XwO6D .jq-selectbox li.selected {
+  background-color: #f5f5f5;
+  color: #000000;
+}
+.cid-s1IY8XwO6D .jq-selectbox:hover .jq-selectbox__trigger-arrow {
+  border-top-color: #f5f5f5;
+}
+.cid-s1IY8XwO6D .jq-selectbox .jq-selectbox__trigger-arrow {
+  border-top-color: #f5f5f5;
+}
+.cid-s1IY8XwO6D textarea.form-control {
+  resize: none;
+}
+.cid-s1IY8XwO6D .input-group-btn {
+  display: inline-block;
+}
+.cid-s1IY8XwO6D .input-group-btn .btn {
+  margin: 0 !important;
+  padding: .75rem 1.5625rem !important;
+  text-transform: none;
+}
+.cid-s1IY8XwO6D .form-group {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-s1IY8XwO6D .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s1IY8XwO6D .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-s1IY8XwO6D .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-s1IY8XwO6D .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-s1IY8XwO6D .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-s1IY8XwO6D .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-s1IY8XwO6D .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-s1IY8XwO6D .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-s1IY8XwO6D .form-control,
+.cid-s1IY8XwO6D .input-group-btn .btn {
+  border-radius: 3px;
+}
+.cid-s1IY8XwO6D .foot-title,
+.cid-s1IY8XwO6D .img-logo {
+  color: #ff3366;
 }
