--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14807,86 +14807,27 @@ section.lazy-placeholder:after {
 .cid-rPJyv7S1OG .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-s1ZjGLgQH6 {
-  overflow-x: hidden !important;
+.cid-s1ZSJMfeeQ {
+  background-image: url("../../../assets/images/whatsapp-image-2020-06-11-at-16.49.22.jpeg");
 }
-.cid-s1ZjGLgQH6 .mbr-section-title {
+.cid-s1ZSJMfeeQ .slider-text-two {
+  background: rgba(19, 19, 19, 0.8) none repeat scroll 0 0;
+  outline: 1px solid rgba(255, 255, 255, 0.2);
+  outline-offset: -15px;
+  padding: 65px 50px;
+}
+.cid-s1ZSJMfeeQ .mbr-section-title {
   color: #ff3366;
 }
-.cid-s1ZjGLgQH6 .mbr-section-title span {
-  color: #ff3366;
-}
-.cid-s1ZjGLgQH6 .mbr-text {
-  color: #efefef;
+.cid-s1ZSJMfeeQ .mbr-text {
+  color: #cccccc;
   letter-spacing: 5px;
   font-weight: 100;
 }
-.cid-s1ZjGLgQH6 .scroll-wrapper {
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-position: 50% 50%;
-  background-size: cover;
-  position: absolute;
-  background-repeat: repeat;
-  z-index: 0;
-  -webkit-animation-duration: 30s !important;
-  animation-duration: 30s;
-  background-image: url("../../../assets/images/dsc01188-2000x1124.jpg");
-  -webkit-animation: scroll-wrapper linear infinite;
-  -moz-animation: scroll-wrapper linear infinite;
-  -o-animation: scroll-wrapper linear infinite;
-  animation: scroll-wrapper linear infinite;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.cid-s1ZjGLgQH6 .scroll-wrapper.second {
-  left: calc(100% - 1px);
-}
-.cid-s1ZjGLgQH6 .mbr-overlay {
-  z-index: 1;
-}
-.cid-s1ZjGLgQH6 .block-content {
-  z-index: 2;
-}
-@keyframes scroll-wrapper {
-  0% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-}
-@-webkit-keyframes scroll-wrapper {
-  0% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-}
-@-moz-keyframes scroll-wrapper {
-  0% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-  }
-}
-@-o-keyframes scroll-wrapper {
-  0% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-s1ZSJMfeeQ .slider-text-two {
+    outline: 15px solid rgba(19, 19, 19, 0.8);
+    border: 1px solid rgba(255, 255, 255, 0.2);
   }
 }
 .cid-s1ZQoMohwI {
