--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14948,6 +14948,123 @@ section.lazy-placeholder:after {
 .cid-s1IY8XwO6D P {
   text-align: center;
 }
+.cid-s2i0uUGbF7 {
+  padding-top: 150px;
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/estampa1-2-122x168.png");
+}
+.cid-s2i0uUGbF7 .mbr-overlay {
+  background-color: #131313;
+  opacity: 0.9;
+}
+.cid-s2i0uUGbF7 .form-control,
+.cid-s2i0uUGbF7 .field-input {
+  padding: 0.5rem;
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-s2i0uUGbF7 .form-control::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .field-input::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .form-control::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .field-input::-webkit-input-placeholder {
+  color: #c1c1c1;
+}
+.cid-s2i0uUGbF7 .form-control:-moz-placeholder,
+.cid-s2i0uUGbF7 .field-input:-moz-placeholder,
+.cid-s2i0uUGbF7 .form-control:-moz-placeholder,
+.cid-s2i0uUGbF7 .field-input:-moz-placeholder {
+  color: #c1c1c1;
+}
+.cid-s2i0uUGbF7 .form-control:hover,
+.cid-s2i0uUGbF7 .field-input:hover,
+.cid-s2i0uUGbF7 .form-control:focus,
+.cid-s2i0uUGbF7 .field-input:focus {
+  background-color: #efefef;
+  border-color: #ff3366;
+  color: #232323;
+  box-shadow: none;
+  outline: none;
+}
+.cid-s2i0uUGbF7 .form-control:hover::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .field-input:hover::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .form-control:focus::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .field-input:focus::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .form-control:hover::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .field-input:hover::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .form-control:focus::-webkit-input-placeholder,
+.cid-s2i0uUGbF7 .field-input:focus::-webkit-input-placeholder {
+  color: #c1c1c1;
+}
+.cid-s2i0uUGbF7 .form-control:hover:-moz-placeholder,
+.cid-s2i0uUGbF7 .field-input:hover:-moz-placeholder,
+.cid-s2i0uUGbF7 .form-control:focus:-moz-placeholder,
+.cid-s2i0uUGbF7 .field-input:focus:-moz-placeholder,
+.cid-s2i0uUGbF7 .form-control:hover:-moz-placeholder,
+.cid-s2i0uUGbF7 .field-input:hover:-moz-placeholder,
+.cid-s2i0uUGbF7 .form-control:focus:-moz-placeholder,
+.cid-s2i0uUGbF7 .field-input:focus:-moz-placeholder {
+  color: #c1c1c1;
+}
+.cid-s2i0uUGbF7 .jq-number__spin:hover,
+.cid-s2i0uUGbF7 .jq-number__spin:focus {
+  background-color: #efefef;
+  border-color: #ff3366;
+  color: #ffffff;
+  box-shadow: none;
+  outline: none;
+}
+.cid-s2i0uUGbF7 .jq-number__spin {
+  background-color: #ffffff;
+  border-color: #cccccc;
+  color: #000000;
+  transition: 0.4s;
+  box-shadow: none;
+  outline: none;
+}
+.cid-s2i0uUGbF7 .jq-selectbox li,
+.cid-s2i0uUGbF7 .jq-selectbox li {
+  background-color: #ffffff;
+  color: #000000;
+}
+.cid-s2i0uUGbF7 .jq-selectbox li:hover,
+.cid-s2i0uUGbF7 .jq-selectbox li.selected {
+  background-color: #efefef;
+  color: #000000;
+}
+.cid-s2i0uUGbF7 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.cid-s2i0uUGbF7 .jq-number__spin.minus:hover:after,
+.cid-s2i0uUGbF7 .jq-number__spin.plus:hover:after {
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+.cid-s2i0uUGbF7 .jq-selectbox .jq-selectbox__trigger-arrow,
+.cid-s2i0uUGbF7 .jq-number__spin.minus:after,
+.cid-s2i0uUGbF7 .jq-number__spin.plus:after {
+  border-top-color: #efefef;
+  border-bottom-color: #efefef;
+}
+.cid-s2i0uUGbF7 input::-webkit-clear-button {
+  display: none;
+}
+.cid-s2i0uUGbF7 input::-webkit-inner-spin-button {
+  display: none;
+}
+.cid-s2i0uUGbF7 input::-webkit-outer-spin-button {
+  display: none;
+}
+.cid-s2i0uUGbF7 input::-webkit-calendar-picker-indicator {
+  display: none;
+}
+.cid-s2i0uUGbF7 LABEL {
+  color: #f9f9f9;
+}
+.cid-s2i0uUGbF7 H2 {
+  color: #f9f9f9;
+}
 .cid-s20vCS5G6J .navbar {
   padding: .5rem 0;
   background: #131313;
@@ -15355,16 +15472,17 @@ section.lazy-placeholder:after {
 .cid-s20vCS5G6J .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-s20vCTyrMC {
-  padding-top: 120px;
-  padding-bottom: 60px;
-  background-color: #000000;
+.cid-s2i59YR3au {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #131313;
 }
-.cid-s20vCTyrMC .mbr-section-subtitle {
-  color: #767676;
+.cid-s2i59YR3au .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
 }
-.cid-s20vCTyrMC H2 {
-  color: #ff3366;
+.cid-s2i59YR3au H4 {
+  color: #ffffff;
 }
 .cid-s20vCW9Kul {
   padding-top: 15px;
