--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -15858,9 +15858,10 @@ section.lazy-placeholder:after {
   background-color: #000000;
 }
 #custom-html-bu div {
-  padding: 80px 0;
+  padding: 100px 0;
   color: #ffffff;
   text-align: center;
+  height: 100%;
 }
 #custom-html-bu p {
   font-size: 14px;
