create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -15854,18 +15854,9 @@ section.lazy-placeholder:after {
 .cid-s5oQ5b9Xuw .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-#custom-html-bu {
+#custom-html-c2 {
+  /* Type valid CSS here */
   background-color: #000000;
-}
-#custom-html-bu div {
-  padding: 60px 0;
-  color: #ffffff;
-  text-align: center;
-  height: 100%;
-}
-#custom-html-bu p {
-  font-size: 14px;
-  color: #ffffff;
 }
 .cid-s5oQ5dTL1N {
   padding-top: 15px;
