--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -15369,6 +15369,104 @@ section.lazy-placeholder:after {
   font-size: 14px;
   color: #000000;
 }
+.cid-s5tzAzBisS {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  background-color: #131313;
+}
+.cid-s5tzAzBisS .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s5tzAzBisS .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s5tzAzBisS .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-s5tzAzBisS .mbr-author-name {
+  color: #ff3366;
+  text-align: center;
+}
+.cid-s5tzAzBisS .mbr-testimonial .panel-item {
+  transition: all 0.3s;
+}
+.cid-s5tzAzBisS .mbr-testimonial .panel-item:hover {
+  transform: translateY(-1.5rem);
+}
+.cid-s5tzAzBisS .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2rem;
+  position: relative;
+}
+.cid-s5tzAzBisS .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  max-width: 180px;
+  max-height: 180px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-s5tzAzBisS .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-s5tzAzBisS .mbr-testimonial .card-footer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(19, 19, 19, 0.8);
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  border-top: 0;
+  word-wrap: break-word;
+  word-break: break-word;
+  transition: all 0.2s;
+  transform: translateY(2rem);
+  box-shadow: 0 10px 55px 5px rgba(255, 102, 140, 0.35);
+  border-radius: 0.25rem;
+}
+.cid-s5tzAzBisS .mbr-testimonial .card-footer:hover {
+  transform: translateY(0rem);
+  opacity: 1;
+}
+@media (max-width: 576px) {
+  .cid-s5tzAzBisS .card-footer {
+    transform: translateY(0rem) !important;
+    opacity: 1!important;
+  }
+}
+@media (max-width: 300px) {
+  .cid-s5tzAzBisS .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+.cid-s5tzAzBisS .mbr-iconfont-social {
+  font-size: 18px;
+}
+.cid-s5tzAzBisS .icon1 {
+  color: #ff3366;
+}
+.cid-s5tzAzBisS .icon2 {
+  color: #149dcc;
+}
+.cid-s5tzAzBisS .icon3 {
+  color: #879a9f;
+}
+.cid-s5tzAzBisS .social-list a:focus {
+  text-decoration: none;
+}
+.cid-s5tzAzBisS H2 {
+  color: #ff3366;
+}
 .cid-rPJyv7S1OG {
   padding-top: 15px;
   padding-bottom: 45px;
