--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14751,24 +14751,28 @@ section.lazy-placeholder:after {
 .cid-rOYcTy2LbV .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-s1r6nyJxpk {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-s692OE94J4 {
+  padding-top: 120px;
+  padding-bottom: 60px;
   background-color: #131313;
 }
-.cid-s1r6nyJxpk P {
+.cid-s692OE94J4 .mbr-section-subtitle {
   color: #767676;
 }
-.cid-s1r6nyJxpk H1 {
-  color: #cc2952;
+.cid-s692OE94J4 H2 {
+  color: #ff3366;
 }
-.cid-s1xmYplO7q {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #131313;
+#custom-html-ce {
+  /* Type valid CSS here */
 }
-.cid-s1xmYplO7q P {
-  color: #767676;
+#custom-html-ce div {
+  padding: 80px 0;
+  color: #777;
+  text-align: center;
+}
+#custom-html-ce p {
+  font-size: 60px;
+  color: #777;
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
