--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -16496,73 +16496,125 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-scaAPBfDZT {
-  padding-top: 30px;
-  padding-bottom: 90px;
-  background-color: #131313;
+.cid-scaSbYkVAX {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
 }
-.cid-scaAPBfDZT .mbr-section-subtitle {
-  color: #cccccc;
-  font-weight: 300;
+.cid-scaSbYkVAX .mbr-text {
+  margin: 0;
 }
-.cid-scaAPBfDZT .mbr-content-text {
-  color: #cccccc;
-}
-.cid-scaAPBfDZT .card {
-  word-wrap: break-word;
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-.cid-scaAPBfDZT .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
-.cid-scaAPBfDZT .cards-container {
-  display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  word-break: break-word;
-}
-.cid-scaAPBfDZT .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
-}
-@media (min-width: 992px) {
-  .cid-scaAPBfDZT .media-block {
-    padding-right: 2rem;
-  }
-}
-.cid-scaAPBfDZT .cards-block {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-scaAPBfDZT .card-img {
-  display: flex;
+.cid-scaSbYkVAX .text-element {
+  padding: 2rem;
+  background-color: #ffffff;
   -webkit-align-items: center;
   align-items: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-scaSbYkVAX .row-element,
+.cid-scaSbYkVAX .image-element {
+  padding: 0;
+}
+.cid-scaSbYkVAX .image-element {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-scaSbYkVAX .image-element .img-wrap {
+  width: 100% !important;
+}
+.cid-scaSbYkVAX .image-element .img-wrap img {
+  width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  object-position: center center;
+}
+.cid-scaSbYkVAX .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-scaSbYkVAX .carousel-item.active,
+.cid-scaSbYkVAX .carousel-item-next,
+.cid-scaSbYkVAX .carousel-item-prev {
+  display: flex;
+}
+.cid-scaSbYkVAX .carousel-indicators {
+  left: 50%;
+  margin: 20px auto 0;
+  align-items: center;
+}
+.cid-scaSbYkVAX .carousel-indicators .active {
+  opacity: 1;
+  border: 0;
+  background-color: #ff3366;
+}
+.cid-scaSbYkVAX .carousel-indicators li {
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  transition: opacity .5s;
+  background-color: #000000;
+  font-size: 2rem;
+  opacity: .5;
+  border-width: 0px;
+}
+.cid-scaSbYkVAX .carousel-indicators li:hover {
+  opacity: 1;
+}
+.cid-scaSbYkVAX .carousel-controls {
+  display: none;
 }
 @media (max-width: 991px) {
-  .cid-scaAPBfDZT .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-left: 0;
-    padding-bottom: 2rem;
+  .cid-scaSbYkVAX .carousel-controls {
+    display: block;
+  }
+  .cid-scaSbYkVAX .carousel-controls a {
+    transition: opacity .5s;
+    font-size: 2rem;
+  }
+  .cid-scaSbYkVAX .carousel-controls a span {
+    padding: 10px;
+    border-radius: 50%;
+    color: #ffffff;
+    background: #444444;
+    opacity: .9;
+  }
+  .cid-scaSbYkVAX .carousel-controls a:hover span {
+    opacity: 1;
+  }
+  .cid-scaSbYkVAX .carousel-indicators {
+    display: none;
   }
 }
-.cid-scaAPBfDZT .mbr-section-title {
+@media (max-width: 540px) {
+  .cid-scaSbYkVAX .text-element {
+    padding: 1rem;
+  }
+  .cid-scaSbYkVAX .carousel-controls {
+    display: none;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-scaSbYkVAX .image-element {
+    min-width: 50%;
+  }
+  .cid-scaSbYkVAX .media-container-row {
+    width: 100%;
+  }
+}
+.cid-scaOlgoqYI {
+  padding-top: 15px;
+  padding-bottom: 45px;
+  background-color: #131313;
+}
+.cid-scaOlgoqYI .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-scaOlgoqYI .number-wrap {
   color: #ff3366;
-}
-.cid-scaAPBfDZT H4 {
-  color: #ffffff;
-}
-.cid-scaKh7Ge5t .number-wrap {
-  color: #ffffff;
   border-color: rgba(255, 255, 255, 0.15);
   position: relative;
   display: inline-block;
@@ -16573,84 +16625,102 @@ section.lazy-placeholder:after {
   border-radius: 2px;
   max-width: 100%;
 }
-.cid-scaKh7Ge5t .number {
+.cid-scaOlgoqYI .number {
   font-style: normal;
   font-weight: 700;
-  font-size: 55px;
   text-transform: none;
   letter-spacing: -2px;
+  font-size: 55px;
   word-spacing: 0;
   line-height: 1.3;
-  color: #ffffff;
+  color: #131313;
 }
-.cid-scaKh7Ge5t .period {
+.cid-scaOlgoqYI .period {
   display: block;
   padding-top: 2px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-.cid-scaKh7Ge5t .dot {
+.cid-scaOlgoqYI .dot {
   position: absolute;
   top: -10px;
-  right: -0.8em;
+  right: -1em;
   width: 1em;
   display: block;
+  font-size: 55px;
   height: 83%;
   overflow: hidden;
   font-style: normal;
   font-weight: 700;
-  font-size: 55px;
   line-height: 89.65px;
   text-transform: none;
   letter-spacing: 0;
   word-spacing: 0;
-  color: #ffffff;
+  color: #131313;
 }
-.cid-scaKh7Ge5t .countdown-cont {
+.cid-scaOlgoqYI .countdown-cont {
+  background: linear-gradient(45deg, #f9f9f9, #f9f9f9);
+  max-width: 700px;
+  border-radius: 3px;
   margin: 0 auto;
 }
-.cid-scaKh7Ge5t .full-count-container {
-  background: #131313;
-}
-@media (min-width: 992px) and (max-width: 1200px) {
-  .cid-scaKh7Ge5t .dot {
-    right: -0.6em;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-scaKh7Ge5t .dot {
-    right: -1em;
-  }
-}
 @media (max-width: 768px) {
-  .cid-scaKh7Ge5t .dot {
+  .cid-scaOlgoqYI .dot {
     display: none;
   }
-  .cid-scaKh7Ge5t .number {
-    white-space: nowrap;
+  .cid-scaOlgoqYI .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
   }
-}
-@media (max-width: 550px) {
-  .cid-scaKh7Ge5t .number-wrap {
+  .cid-scaOlgoqYI .number-wrap {
     min-width: auto;
   }
 }
-@media (max-width: 440px) {
-  .cid-scaKh7Ge5t .number {
-    font-size: 40px;
+@media (max-width: 576px) {
+  .cid-scaOlgoqYI .row {
+    flex-wrap: nowrap;
+  }
+  .cid-scaOlgoqYI .number {
+    white-space: nowrap;
   }
 }
-@media (max-width: 380px) {
-  .cid-scaKh7Ge5t .period {
+@media (max-width: 440px) {
+  .cid-scaOlgoqYI .number {
+    font-size: 30px;
+  }
+  .cid-scaOlgoqYI .period {
     font-size: 0.8rem;
   }
 }
 @media (max-width: 300px) {
-  .cid-scaKh7Ge5t .number {
-    font-size: 25px;
+  .cid-scaOlgoqYI .number {
+    font-size: 20px;
   }
-  .cid-scaKh7Ge5t .period {
-    font-size: 0.7rem;
+  .cid-scaOlgoqYI .period {
+    font-size: 0.6rem;
   }
+}
+.cid-scaOlgoqYI H2 {
+  color: #ff3366;
+}
+.cid-scaOlgoqYI H4 {
+  text-align: center;
+  color: #ff3366;
+}
+.cid-scaOlgoqYI H5 {
+  color: #131313;
+}
+.cid-scaPgxai0D {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-scaPgxai0D .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-scaPgxai0D .btn {
+  margin: 0 0 .5rem 0;
 }
 .cid-rPJyv7S1OG {
   padding-top: 15px;
